--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@types/node": "^22.10.1",
+		"@types/qrcode": "^1.5.5",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.14",
 		"prettier": "^3.3.2",
@@ -27,6 +28,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
@@ -35,6 +37,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"phaser": "^3.87.0"
+		"phaser": "^3.87.0",
+		"qrcode": "^1.5.4"
 	}
 }
